--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,2 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-# Datasource local storage ignored files
-/../../../../../:\CustomPrograms\Java8\Shop\.idea/dataSources/
-/dataSources.local.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-
-target/
+# 忽略打包后的内容
+/target/
